Continued updates to documentation

--- a/docs/content/ios/index.mdx
+++ b/docs/content/ios/index.mdx
@@ -45,3 +45,7 @@ Remember these are MFi protocols, they are not communication protocols.  I've re
 You either need to find the protocols listed on the companies website (Zebra for example has some posted) but in most cases these are kept super secret; like Fight Club secret!
 
 Getting devices MFi compliant costs companies a boat load of money, so they don't generally give these out for free.  You'll need to work with a vendor constantly (as you'll find there are some super annoying things to do for releasing). 
+
+#### How to I change Encoding?
+
+The default connection uses [https://developer.apple.com/documentation/corefoundation/cfstringbuiltinencodings](https://developer.apple.com/documentation/corefoundation/cfstringbuiltinencodings) values when setting `DEVICE_ENCODING` during connection.
