--- a/docs/content/ios/index.mdx
+++ b/docs/content/ios/index.mdx
@@ -34,6 +34,13 @@ while attempting to use the library.  An example of what this looks like in your
 </plist>
 ```
 
+There are also a number of other IOS security related items that are required:
+
+```xml
+<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Access bluetooth device over serial connection to document connection features</string>
+```
+
 ## F.A.Q
 
 #### Why isn't my protocol working?
