I think you just made a typo.
It was triggerring same function i.e. onDeviceConnected() even when device was being disconnected!

--- a/docs/content/react-native/rn-bluetooth-classic.mdx
+++ b/docs/content/react-native/rn-bluetooth-classic.mdx
@@ -178,7 +178,7 @@ Provides a listener for events fired when `Socket` connections are: closed, drop
 
 ```javascript
 componentDidMount() {
-    this.subscription = RNBluetoothClassic.onDeviceDisconnected(this.onDeviceConnected);
+    this.subscription = RNBluetoothClassic.onDeviceDisconnected(this.onDeviceDisconnected);
 }
 
 componetWillUnmount() {    
